Upgrade leshan and californium versions for monitoring